# Berry

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
images/appIcons/: favicon.rc
src/: main.cpp
